create github pages

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Featured Videos</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Here is a few of my projects.</h5>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Here is few projects I shot and Edited.</h5>
         </div>
         <div class="row mt-4">
             <div class="col-12 col-md-6 video-block">
@@ -569,7 +569,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rz+po4MPR5DkK98Dy0jokh9dXkfjOHxw+qcXC50rZ6xJLSbgfI0Wr9nQseuM5RE6Veou0BTEIUP1XtDddUBt2OP2OhO8pc364PMscy4zKoQpkDE30IGpU7Sh2i4Za60/.guTKjy0GyiL2L2SEBBJmAUeRkH4dzgZkx2K+VcMklz6euqQZVqokYznaW0W1ivOfU/+bkrJZbxB5K500wXEI65EiKH2jy/Zaj6h5OHHBiHuGG8Y/xZDfQR1+vs3hrPMq">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NDbMPJ+mUPPwQsO6DapHTab00vMlXUn0ay12yDKtJaqiTlW5EhgkkgmFBY50bk6LTn6hz/dS1kt3A00enOJ7FzXPas/e0Z/f9pXW4Wy3XzgqrJpar7xgozLJRQislr79.5ocD7BXToxzDd+S8gYLvQZJBtZI0n+FXUnAhXFpeV3oXhQLNzroLMlkrxs7ZE65sFo+1HZJqubyarYQPqARjZY/iFg0L3JjIUWItVbxzRU2163BWDi6rKc1gztdvta9j">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
