create github pages

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         <div class="row">            
             <div class="col-12 row inline">
                 <div class="col-12 col-sm-3">
-                    <p class="date mbr-fonts-style display-4"><strong>2016-2021</strong></p>
+                    <p class="date mbr-fonts-style display-4"><strong>2016- Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer, Owner<br>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer</strong><br><strong>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
                     <p class="description mbr-fonts-style display-4">I created The Hit Studios in 2016 and have been offering freelancing photography, videography and editing services to a wide variety of clients. From Portrait, studio, lifestyle and products photography to Beauty &amp; Fashion films, Health &amp; Fitness videos, Corporate &amp; Interviews videos, Real Estate Videos, Commercials, Music videos, Events videos and Weddings videos</p>
@@ -203,10 +203,10 @@
         <div class="row">  
             <div class="col-12 row inline">
                 <div class="col-12 col-sm-3">
-                    <p class="date mbr-fonts-style display-4"><strong>2017-2021</strong></p>
+                    <p class="date mbr-fonts-style display-4"><strong>2017-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Designer, Content Strategist, Co-founder<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Web Designer, Content Strategist,<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
                     <p class="description mbr-fonts-style display-4">Co-founded Upgain, a Digital Marketing Agency, with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, E-commerce stores as well as relevant, quality content that is of interest to their target group and prospects. ( <a href="https://letsgetit2021.com/" class="text-primary" target="_blank">SEE PORTFOLIO HERE </a>)</p>
@@ -223,7 +223,7 @@
         <div class="row">  
             <div class="col-12 row inline">
                 <div class="col-12 col-sm-3">
-                    <p class="date mbr-fonts-style display-4"><strong>2018-2021</strong></p>
+                    <p class="date mbr-fonts-style display-4"><strong>2018-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
                     <p class="workplace mbr-fonts-style display-7"><strong>Video Producer, Editor<br>- <a href="http://www.handzdirtypr.com/#!/placement" class="text-primary" target="_blank">Handz Dirty PR</a>.</strong></p>
@@ -569,7 +569,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7vWMMTRRb3zx4Vwa0YQnEwvsCzbpLaa+8C//lIm6q6KznX/A3oBFVMjn9r9thiEOAzlsLf7mCbEiHzR30KNtuCN4WzNbAn6Px1UJCDjYnowEmixKoZZ8raW33aU9besV.P3Xu4DRLeK8gat0+LVjziC96bj+QXhsHmsY33CrzeNUQJLe3zQHP9C/wAGymydTEg8yNfu0ctj++RPEw1RYN7VPwFZmBaRkhpoSY/WpH6CsCFFgKnVtMpD/J9LWU/s9E">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Nc+cuMznuhmr/kj+q8U5cj2QwIZvzTEfqOmYGJQk1Z7UK/bTJ3jI1c1AOlx9zXkx6WhTPElU542m0HDzvyqta2aWMPoJKEBxjWZ2buS5w4irNUqX5Cdjy9wZVhwbg1WD.71h7Zg/m+d34pxfPde0YyMOU79FllbRcibEHszm2YL9FzLyTEYY8k+Jnyak4tH5RZKLyG6J94jA3qVMm7zvqhcupnwQpI9qMisucovzjRDua2gC3LJHjfyHroH5VUpMF">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
