create github pages

--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
 
                 <h2 class="mbr-fonts-style mb-3 mbr-section-subtitle display-4"><strong>Hi, i'm Landry&nbsp;</strong></h2>
 
-                <h1 class="mbr-fonts-style mb-3 mbr-section-title display-2"><strong>A Filmmaker</strong><br><strong>&amp; Photographer.</strong></h1>
+                <h1 class="mbr-fonts-style mb-3 mbr-section-title display-1"><strong>A Content Producer,</strong><br><strong>Designer &amp; Marketer</strong></h1>
 
                 <div class="row">
                     <div class="col-12 col-md-auto">
                         <div class="counter">
-                            <p class="number mbr-text display-2"><strong>516</strong></p>
+                            <p class="number mbr-text display-2"><strong>416</strong></p>
                             <p class="description mbr-text display-4">Completed<br>projects</p>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-auto">
                         <div class="counter">
-                            <p class="number mbr-text display-2"><strong>358</strong></p>
+                            <p class="number mbr-text display-2"><strong>298</strong></p>
                             <p class="description mbr-text display-4">Satisfied<br>customers</p>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="progress-bar progress1"></div>
                     </div>
 
-                    <p class="name display-4"><strong>Editing &amp; Design- 91%</strong>
+                    <p class="name display-4"><strong>Web &amp; Graphic Design- 91%</strong>
                     </p>
 
                     <div class="progress">
@@ -183,10 +183,10 @@
         <div class="row">            
             <div class="col-12 row inline">
                 <div class="col-12 col-sm-3">
-                    <p class="date mbr-fonts-style display-4"><strong>2016- Present</strong></p>
+                    <p class="date mbr-fonts-style display-4"><strong>2016-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer</strong><br><strong>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer, Owner<br>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
                     <p class="description mbr-fonts-style display-4">I created The Hit Studios in 2016 and have been offering freelancing photography, videography and editing services to a wide variety of clients. From Portrait, studio, lifestyle and products photography to Beauty &amp; Fashion films, Health &amp; Fitness videos, Corporate &amp; Interviews videos, Real Estate Videos, Commercials, Music videos, Events videos and Weddings videos</p>
@@ -206,7 +206,7 @@
                     <p class="date mbr-fonts-style display-4"><strong>2017-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Web Designer, Content Strategist,<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Web Designer, Marketing Strategist, Co-founder<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
                     <p class="description mbr-fonts-style display-4">Co-founded Upgain, a Digital Marketing Agency, with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, E-commerce stores as well as relevant, quality content that is of interest to their target group and prospects. ( <a href="https://letsgetit2021.com/" class="text-primary" target="_blank">SEE PORTFOLIO HERE </a>)</p>
@@ -229,7 +229,7 @@
                     <p class="workplace mbr-fonts-style display-7"><strong>Video Producer, Editor<br>- <a href="http://www.handzdirtypr.com/#!/placement" class="text-primary" target="_blank">Handz Dirty PR</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <p class="description mbr-fonts-style display-4">In partnership with&nbsp;Handz Dirty PR, A full service boutique-sized PR firm based in NYC and Owned By RoseMarie Reyes, I've been in charge of directing and producing high quality cinematic BTS videos for different magazine's covers shoots with celebrities all over the country, as well as different other video projects.</p>
+                    <p class="description mbr-fonts-style display-4">In partnership with&nbsp;Handz Dirty PR, A full service boutique-sized PR firm based in NYC and Owned By RoseMarie Reyes, I've been in charge of directing and producing high quality cinematic BTS videos for different magazine's covers shoots with celebrities all over the country, as well as different other projects.</p>
                 </div>
             </div>
         </div>
@@ -569,7 +569,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kqkaFEh27Jz40NwkcSP/Y6eKb4zv7aT/Ue7DypbUsOLnR7LOWVdmu8tkviMCxyLHK4BT5YRpEqwVrE2iUyraWzwPPi9zo+zpPHHPVmZTJCoiMRMNIbgIuuftLdjcPA8w.aVQM8JsNl+LmZYkE6PghrBmuDwSW7siNo73svPPQrwlqmbdtvuknd+ae4lv1QSJPfGXGiGhNI4tNh0RSSvjo46Acg++cldUybCTSvAThm0BX939rHdplMkY0ZCm9/owQ">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Mjwq5E8PoLGG7z9g4owlE+Z6jYTzVeK8ajHGxbS7cOZehkiry06rIP0rgojayWdr1NWxbLtVKeB3ZSIOgP3aVmlu92eRoMP8cFF3dzsitMkmS1h5NgzQHCrgqjO9eXZt.Gzc1S/AGT3l5SUIQ0wGAQbUB9JeMg7+IjqkfjNylNnAW7hR4Xe0h+PMIm3IPI1lFP1IyV/gShheKd8enEwsspdjm1rEn0UqAFDVX0is9jEMm0Q+dYru5FScF1UyDezPn">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
