create github pages

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Mjwq5E8PoLGG7z9g4owlE+Z6jYTzVeK8ajHGxbS7cOZehkiry06rIP0rgojayWdr1NWxbLtVKeB3ZSIOgP3aVmlu92eRoMP8cFF3dzsitMkmS1h5NgzQHCrgqjO9eXZt.Gzc1S/AGT3l5SUIQ0wGAQbUB9JeMg7+IjqkfjNylNnAW7hR4Xe0h+PMIm3IPI1lFP1IyV/gShheKd8enEwsspdjm1rEn0UqAFDVX0is9jEMm0Q+dYru5FScF1UyDezPn">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WX03NCIjcHfksJQyHX0aFVP3Phpva5aKqju8a4siWBMxNAJUTJv+tX0Mh+CtgpTEQb0r+DIPn2LbfpLB61C8E21enyxx8J80m/rPG3b3AH+7luV682xsJi2CFgYtmGWT.kuGmkwC6e/jAIRALaG9s34wbVO6Fj2KvBXPuZk3RUM7sAcDeH1WXp7cLaMC0ighmMQeqLr6ntbsLvJpZgrjAL0cWC9kpgt9SYkrakHtJ40Unx44+rG7MK3F274G6v0YI">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -577,7 +577,7 @@
 
                     <div class="dragArea form-row">
                         <div class="col-lg-12 col-md-12 col-sm-12 form-heading">
-                            <h2 class="title mbr-section-title display-5"><strong>I am always looking for great collaborators. Message me now and let's make <a href="index.html" class="text-primary">something together!</a></strong></h2>
+                            <h2 class="title mbr-section-title display-5"><strong>I am always looking for great collaborators. Message me now and let's make <a href="mailto:thehitfilms@gmail.com" class="text-primary">something together!</a></strong></h2>
                         </div>
 
                         <div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="name">
@@ -659,6 +659,7 @@
   
   
   
-
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+  
 </body>
 </html>
