create github pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -202,7 +203,7 @@ src="https://www.facebook.com/tr?id=440185523638708&ev=PageView&noscript=1"
                     <p class="date mbr-fonts-style display-4"><strong>2016-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Freelancer, Owner<br>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Content Producer,</strong><br><strong>Freelancer<br>- <a href="http://thehitfilms.com" class="text-primary" target="_blank">The Hit Studios</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
                     <p class="description mbr-fonts-style display-4">I created The Hit Studios in 2016 and have been offering freelancing photography, videography and editing services to a wide variety of clients. From Portrait, studio, lifestyle and products photography to Beauty &amp; Fashion films, Health &amp; Fitness videos, Corporate &amp; Interviews videos, Real Estate Videos, Commercials, Music videos, Events videos and Weddings videos</p>
@@ -222,10 +223,10 @@ src="https://www.facebook.com/tr?id=440185523638708&ev=PageView&noscript=1"
                     <p class="date mbr-fonts-style display-4"><strong>2017-Present</strong></p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <p class="workplace mbr-fonts-style display-7"><strong>Web Designer, Marketing Strategist, Co-founder<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
+                    <p class="workplace mbr-fonts-style display-7"><strong>Social Media Marketing Strategist,&nbsp;Web Designer<br>- <a href="https://upgain.co/" class="text-primary" target="_blank">Upgain Dev</a>.</strong></p>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <p class="description mbr-fonts-style display-4">Co-founded Upgain, a Digital Marketing Agency, with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, E-commerce stores as well as relevant, quality content that is of interest to their target group and prospects. ( <a href="https://letsgetit2021.com/" class="text-primary" target="_blank">SEE PORTFOLIO HERE </a>)</p>
+                    <p class="description mbr-fonts-style display-4">Co-founded Upgain, a Digital Marketing Agency, with a partner with the mission to help businesses adapt to the emerging competitive “online-based” market of our time.&nbsp;We've been helping several small businesses and startup companies find new innovative ways to increase their amount of customers, better their brand’s online presence and maintain customer’s loyalty with the help of the latest advertising technologies and most impactful marketing contents. With my background in Graphic and Web design and expertise in Content creation and digital marketing we were able to help over 100 small businesses elevate their brand and online presence by creating cutting-edge and innovative websites, E-commerce stores as well as relevant, quality content that is of interest to their target group and prospects.&nbsp;</p>
                 </div>
             </div>
         </div>
@@ -603,7 +604,7 @@ src="https://www.facebook.com/tr?id=440185523638708&ev=PageView&noscript=1"
             </div>
 
             <div class="col-lg-7 offset-lg-1 col-12" data-form-type="formoid">                
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Dq3V/4KtKmoy1VwdhtIdMihyRNkEbPl1yn5gCkR5wmKYtFPUKMxx5xjupan1a9VXH6AaMlFOcnxA5Irzfa8Dte0bCChX1+rUQ/mhcfxpUA14f/9IXe4tmyDelFLxBnP9.YbzO4IPr809ZHqbv3wFMElvsAHcUdAuBdn3ZS9y8EphKxuYMwnY1FuGjYs5QGvazo6TjR+Jt//E5b9t73DxzwKhd9FUGaHgsuKHMmveXirOEzXElDFsakxnJe9vX3CSA">                                
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="65QXuu67hI6Z6phgsZnPBnCfXu8PGrtK1v+fa2mfRX2V3m2St3fbEGlXhOBStqrv19DOsl3eC+KjXoHWRpNaxtgqlYPZnYGxbbHglMWC7I4+lor+OhBhr7tbZ5VxAZKs.25tNv/5osM1Y08isPrcRAodpQYE52T1BtPlZYB2nSs4swkcl6uASs5VQCfs8y1H7HbK1uq3L2MhWjobmC1FmiahhCq1pstN474cW3+RjAzFJK+Ck3luPhGmyFe6u1vBg">                                
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -682,6 +683,7 @@ src="https://www.facebook.com/tr?id=440185523638708&ev=PageView&noscript=1"
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
@@ -692,6 +694,7 @@ src="https://www.facebook.com/tr?id=440185523638708&ev=PageView&noscript=1"
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
